// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`successExecute [Case insensitive] variable "=  Variable.NUM1  " -> 0 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "replacements": Array [
        "#22222222-2222-2222-2222-222222222222",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "44444444-4444-5555-1111-222222222222",
        },
        "id": "44444444-4444-5555-1111-222222222222",
        "kind": "Variable",
        "name": "num1",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "num1",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
  ],
]
`;

exports[`successExecute block "=   #11111111-1111-1111-1111-111111111111  " -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "   ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "Block",
      "errors": Array [],
      "namespaceId": "11111111-1111-1111-1111-111111111111",
      "replacements": Array [
        "#11111111-1111-1111-1111-111111111111",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
  ],
]
`;

exports[`successExecute block "=  #44444444-4444-aaaa-0000-111111111111  " -> BLOCK_SNAPSHOT,1 Block With Space,44444444-4444-aaaa-0000-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "44444444-4444-aaaa-0000-111111111111",
          "type": "id",
          "value": "44444444-4444-aaaa-0000-111111111111",
        },
        "id": "44444444-4444-aaaa-0000-111111111111",
        "kind": "Block",
        "name": "1 Block With Space",
        "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      },
      "code": "Block",
      "display": "\\"1 Block With Space\\"",
      "errors": Array [],
      "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      "replacements": Array [
        "#44444444-4444-aaaa-0000-111111111111",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
  ],
]
`;

exports[`successExecute block "="1 Block With Space"" -> BLOCK_SNAPSHOT,1 Block With Space,44444444-4444-aaaa-0000-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "44444444-4444-aaaa-0000-111111111111",
          "type": "id",
          "value": "44444444-4444-aaaa-0000-111111111111",
        },
        "id": "44444444-4444-aaaa-0000-111111111111",
        "kind": "Block",
        "name": "1 Block With Space",
        "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      },
      "code": "Block",
      "display": "\\"1 Block With Space\\"",
      "errors": Array [],
      "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      "replacements": Array [
        "#44444444-4444-aaaa-0000-111111111111",
      ],
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute block "="Block"" -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "Block",
      "errors": Array [],
      "namespaceId": "11111111-1111-1111-1111-111111111111",
      "replacements": Array [
        "#11111111-1111-1111-1111-111111111111",
      ],
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute block "=#CurrentBlock" -> BLOCK_SNAPSHOT,1 Block With Space,44444444-4444-aaaa-0000-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "44444444-4444-aaaa-0000-111111111111",
          "type": "id",
          "value": "44444444-4444-aaaa-0000-111111111111",
        },
        "id": "44444444-4444-aaaa-0000-111111111111",
        "kind": "Block",
        "name": "1 Block With Space",
        "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      },
      "code": "Block",
      "display": "#CurrentBlock",
      "errors": Array [],
      "namespaceId": "44444444-4444-aaaa-0000-111111111111",
      "replacements": Array [
        "#44444444-4444-aaaa-0000-111111111111",
      ],
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute block "=#CurrentBlock" -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "#CurrentBlock",
      "errors": Array [],
      "namespaceId": "11111111-1111-1111-1111-111111111111",
      "replacements": Array [
        "#11111111-1111-1111-1111-111111111111",
      ],
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute block "=Block" -> BLOCK_SNAPSHOT,Block,11111111-1111-1111-1111-111111111111 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "11111111-1111-1111-1111-111111111111",
          "type": "id",
          "value": "11111111-1111-1111-1111-111111111111",
        },
        "id": "11111111-1111-1111-1111-111111111111",
        "kind": "Block",
        "name": "Block",
        "namespaceId": "11111111-1111-1111-1111-111111111111",
      },
      "code": "Block",
      "display": "Block",
      "errors": Array [],
      "namespaceId": "11111111-1111-1111-1111-111111111111",
      "replacements": Array [
        "#11111111-1111-1111-1111-111111111111",
      ],
      "type": "Block",
    },
  ],
]
`;

exports[`successExecute functionCall "=Abs(-1) + abs(1) + ABS(1) + core::ABS(-1)" -> 4 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "Abs",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "-1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "abs",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "ABS",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionGroup",
      "display": "core",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "DoubleColon",
      "display": "::",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "ABS",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "-1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "type": "number",
    },
  ],
]
`;

exports[`successExecute functionCall "=custom::PLUS(1, 1)" -> 2 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "FunctionGroup",
      "display": "custom",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "DoubleColon",
      "display": "::",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "PLUS",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "LParen",
      "display": "(",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Comma",
      "display": ",",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "RParen",
      "display": ")",
      "errors": Array [],
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=#22222222-2222-2222-2222-222222222222.num1  " -> 0 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "replacements": Array [
        "#22222222-2222-2222-2222-222222222222",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "44444444-4444-5555-1111-222222222222",
        },
        "id": "44444444-4444-5555-1111-222222222222",
        "kind": "Variable",
        "name": "num1",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "num1",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": "  ",
      "errors": Array [],
      "type": "any",
    },
  ],
]
`;

exports[`successExecute variable "=#CurrentBlock.num1" -> 0 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "#CurrentBlock",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "replacements": Array [
        "#22222222-2222-2222-2222-222222222222",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "44444444-4444-5555-1111-222222222222",
        },
        "id": "44444444-4444-5555-1111-222222222222",
        "kind": "Variable",
        "name": "num1",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "num1",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=Variable.num1" -> 0 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "22222222-2222-2222-2222-222222222222",
        },
        "id": "22222222-2222-2222-2222-222222222222",
        "kind": "Block",
        "name": "Variable",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Block",
      "display": "Variable",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "replacements": Array [
        "#22222222-2222-2222-2222-222222222222",
      ],
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "44444444-4444-5555-1111-222222222222",
        },
        "id": "44444444-4444-5555-1111-222222222222",
        "kind": "Variable",
        "name": "num1",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "num1",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "type": "number",
    },
  ],
]
`;

exports[`successExecute variable "=num1" -> 0 1`] = `
Array [
  "codeFragments",
  Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "22222222-2222-2222-2222-222222222222",
          "type": "id",
          "value": "44444444-4444-5555-1111-222222222222",
        },
        "id": "44444444-4444-5555-1111-222222222222",
        "kind": "Variable",
        "name": "num1",
        "namespaceId": "22222222-2222-2222-2222-222222222222",
      },
      "code": "Variable",
      "display": "num1",
      "errors": Array [],
      "namespaceId": "22222222-2222-2222-2222-222222222222",
      "type": "number",
    },
  ],
]
`;
